language/move-lang/tests/move_check/typing/subtype_return_invalid.exp
error: 

   ┌── tests/move_check/typing/subtype_return_invalid.move:4:11 ───
   │
 5 │         u
   │         ^ Invalid return expression
   ·
 4 │     t0(u: &u64): &mut u64 {
   │           ---- The type: '&u64'
   ·
 4 │     t0(u: &u64): &mut u64 {
   │                  -------- Is not a subtype of: '&mut u64'
   │

error: 

   ┌── tests/move_check/typing/subtype_return_invalid.move:8:11 ───
   │
 9 │         s
   │         ^ Invalid return expression
   ·
 8 │     t1(s: &S): &mut S {
   │           -- The type: '&0x8675309::M::S'
   ·
 8 │     t1(s: &S): &mut S {
   │                ------ Is not a subtype of: '&mut 0x8675309::M::S'
   │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:12:22 ───
    │
 13 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    ·
 12 │     t2(u1: &u64, u2: &u64): (&u64, &mut u64) {
    │                      ---- The type: '&u64'
    ·
 12 │     t2(u1: &u64, u2: &u64): (&u64, &mut u64) {
    │                                    -------- Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:16:12 ───
    │
 17 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    ·
 16 │     t3(u1: &u64, u2: &u64): (&mut u64, &u64) {
    │            ---- The type: '&u64'
    ·
 16 │     t3(u1: &u64, u2: &u64): (&mut u64, &u64) {
    │                              -------- Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_return_invalid.move:20:12 ───
    │
 21 │         (u1, u2)
    │         ^^^^^^^^ Invalid return expression
    ·
 20 │     t4(u1: &u64, u2: &u64): (&mut u64, &mut u64) {
    │            ---- The type: '&u64'
    ·
 20 │     t4(u1: &u64, u2: &u64): (&mut u64, &mut u64) {
    │                              -------- Is not a subtype of: '&mut u64'
    │

